--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"tsc -b && node dist/index.js"
+    "dev":"tsc -b && node dist/index.js",
+    "build":"tsc -b"
   },
   "keywords": [],
   "author": "",
